src/objects/Project_Billing_Rate__c.object
<CustomObject>
    <label>Project Billing Rate</label>
    <nameField>
        <label>Project Billing Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Billing Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Custom_1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Custom 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Custom_2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Custom 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Custom_3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Custom 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fringe__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Fringe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>G_A__c</fullName>
        <defaultValue>0</defaultValue>
        <label>G&amp;A</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Overhead__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Overhead</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>